kubernetes/components/dragonfly/networkpolicy-client.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-${APP}-client
spec:
  podSelector:
    matchLabels:
      app: dragonfly-${APP}
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ${APP_NAMESPACE}
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ${APP}
      ports:
        - protocol: TCP
          port: 6379
